# zk-clob

./: .gitignore  Cargo.toml  README.md
contracts/src/: ClobVerifier.sol
contracts/test/: ClobVerifier.t.sol  ClobVerifierFixture.t.sol
contracts/testdata/: proof.json
crates/core/: Cargo.toml
crates/core/src/: constants.rs  encoding.rs  engine.rs  errors.rs  hash.rs  input.rs  lib.rs  math.rs  merkle.rs  outputs.rs  state.rs  types.rs  verify.rs
crates/core/tests/: matching.rs  math.rs  merkle.rs  serialization.rs
crates/guest/: Cargo.toml
crates/guest/src/: main.rs
crates/host/: Cargo.toml  build.rs
crates/host/src/: main.rs
examples/: input.json
scripts/: run_clob_example.sh
spec/: SPEC.md
